<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bank.lms</groupId>
    <artifactId>rcrms-backend</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>rcrms-backend</name>
    <description>rcrms 催收管理系统后端</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- Spring Boot Starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <!-- 排除内嵌 Tomcat，替换为宝兰德 BES Lite -->
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <!-- Spring Data JPA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- Database - MySQL (开发环境) -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>

        <!-- Servlet 容器 - 宝兰德 BES Lite（内嵌版，替代 Tomcat） -->
        <dependency>
            <groupId>com.bes.appserver</groupId>
            <artifactId>bes-lite-spring-boot-2.x-starter</artifactId>
            <version>9.5.5.033</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/bes-lite-spring-boot-2.x-starter-9.5.5.033.jar</systemPath>
        </dependency>

        <!-- BES Actuator（可选，运行时监控） -->
        <dependency>
            <groupId>com.bes.appserver</groupId>
            <artifactId>bes-actuator-spring-boot-2.x-starter</artifactId>
            <version>9.5.5.033</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/bes-actuator-spring-boot-2.x-starter-9.5.5.033.jar</systemPath>
        </dependency>

        <!-- Druid连接池 -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid-spring-boot-starter</artifactId>
            <version>1.2.20</version>
        </dependency>

        <!-- Database - GaussDB (测试/生产环境，本地JAR) -->
        <dependency>
            <groupId>com.huawei</groupId>
            <artifactId>gaussdbjdbc</artifactId>
            <version>3.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/gaussdbjdbc.jar</systemPath>
        </dependency>

        <!-- Database - GBase 8s (本地JAR) -->
        <!-- 将 gbase-connector-java-*.jar 放到 lib 目录下 -->
        <dependency>
            <groupId>com.gbase</groupId>
            <artifactId>gbase-connector-java</artifactId>
            <version>8.3.81.53</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/gbase-connector-java-8.3.81.53-build55.2.1-bin.jar</systemPath>
        </dependency>



        <!-- Excel -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.5</version>
        </dependency>

        <!-- Development -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <includeSystemScope>true</includeSystemScope>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
